move jmx-detector